# kadmium-dmx-daw-plugin

./: .gitignore  CMakeLists-FetchContent.txt  CMakeLists-Submodule.txt  CMakeLists.txt  CMakePresets.json  DYNAMIC_SYSTEM.md  PARAMETER_SYSTEM.md  README.md  build.sh  vcpkg-cmake-toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
Source/: MidiMap.cpp  MidiMap.h  MqttClient.cpp  MqttClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
